--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.3",
+    "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "randexp": "^0.5.3",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
